--- a/index.html
+++ b/index.html
@@ -4,25 +4,31 @@
     <meta charset="utf-8" />
     <title>firebase-starter</title>
     <meta name="viewport" content="width=device-width, initial-scale=1" />
+    <link href="https://cdnjs.cloudflare.com/ajax/libs/normalize/4.2.0/normalize.min.css" rel="stylesheet" />
     <link href="index.css" rel="stylesheet" />
   </head>
   <body>
     <main>
+
       <div class="header">
-        <h1>firebase-starter</h1>
-        <div class="login-block">
-          <input id="email-input" type="text" name="email" placeholder="email"/>
-          <input id="password-input" type="text" name="name" placeholder="name"/>
-          <input id="login-button" type="submit" name="submit" value="submit"></input>
+        <div class="container">
+          <h1 class="header-title">firebase-starter</h1>
+          <div class="login-block">
+            <input id="email-input" type="text" name="email" placeholder="email"/>
+            <input id="password-input" type="text" name="name" placeholder="name"/>
+            <input id="login-button" type="submit" value="submit"></input>
+          </div>
         </div>
       </div>
-      <button id="fetchAll">fetchAll</button>
-      <ul id="data-output">
 
-      </ul>
-      <div>
-        <input id="message-input" type="text" placeholder="message"/>
-        <input id="submit-button" type="submit" name="submit" value="submit"></input>
+      <div class="container content">      
+        <button id="fetchAll">fetchAll</button>
+        <ul id="data-output">
+        </ul>
+        <div>
+          <input id="message-input" type="text" placeholder="message"/>
+          <button id="submit-button" type="submit" value="submit">Submit</button>
+        </div>
       </div>
     </main>
     <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
