Make signup button

--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
           <h1 class="header-title">firebase-starter</h1>
           <div class="login-block">
             <input id="email-input" type="text" name="email" placeholder="email"/>
-            <input id="password-input" type="text" name="name" placeholder="name"/>
-            <input id="login-button" type="submit" value="submit"></input>
+            <input id="password-input" type="password" name="name" placeholder="password"/>
+            <input id="login-button" type="submit" value="Log In"></input>
+            <input id="signup-button" type="submit" value="Sign Up"></input>
           </div>
         </div>
       </div>
