--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       </div>
     </main>
     <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
+    <script src="https://www.gstatic.com/firebasejs/3.2.0/firebase.js"></script>
     <script src="bundle.js"></script>
   </body>
 </html>
