--- a/index.html
+++ b/index.html
@@ -22,13 +22,21 @@
         </div>
       </div>
       <hr/>
-      <div class="container content">      
-        <button id="fetchAll">fetchAll</button>
-        <ul id="data-output">
-        </ul>
-        <div>
-          <input id="message-input" type="text" placeholder="message"/>
-          <button id="submit-button" type="submit" value="submit">Submit</button>
+      <div class="container content">
+        <div class="row">
+          <div class="eight columns">
+            <h4>Files</h4>
+          </div>
+          <div class="four columns">
+            <!-- <button id="fetchAll">fetchAll</button> -->
+            <h4>Messages</h4>
+            <ul id="data-output">
+            </ul>
+            <div>
+              <input id="message-input" type="text" placeholder="message"/>
+              <button id="submit-button" type="submit" value="submit">Submit</button>
+            </div>
+          </div>
         </div>
       </div>
     </main>
