Style and format

--- a/index.html
+++ b/index.html
@@ -30,10 +30,10 @@
           <div class="four columns">
             <!-- <button id="fetchAll">fetchAll</button> -->
             <h4>Messages</h4>
-            <ul id="data-output">
-            </ul>
-            <div>
-              <input id="message-input" type="text" placeholder="message"/>
+            <div id="messages">
+            </div>
+            <div id="message-input-group">
+              <input id="message-input" type="text" placeholder="enter a message"/>
               <button id="submit-button" type="submit" value="submit">Submit</button>
             </div>
           </div>
