--- a/index.html
+++ b/index.html
@@ -26,6 +26,12 @@
         <div class="row">
           <div class="eight columns">
             <h4>Files</h4>
+            <div class="upload-block">
+              <progress value="0" max="100" id="uploader">0%</progress>
+              <input type="file" id="file-button"/>
+            </div>
+            <div id="file-index">
+            </div>
           </div>
           <div class="four columns">
             <!-- <button id="fetchAll">fetchAll</button> -->
