--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
       <hr/>
       <div class="container content">
         <div class="row">
-          <div class="eight columns">
+          <div class="seven columns">
             <h4>Files</h4>
             <div class="upload-block">
               <progress value="0" max="100" id="uploader">0%</progress>
@@ -33,7 +33,7 @@
             <div id="file-index">
             </div>
           </div>
-          <div class="four columns">
+          <div class="five columns">
             <!-- <button id="fetchAll">fetchAll</button> -->
             <h4>Messages</h4>
             <div id="messages">
