--- a/index.html
+++ b/index.html
@@ -9,20 +9,19 @@
     <link href="index.css" rel="stylesheet" />
   </head>
   <body>
-    <main>
-
-      <div class="container">
-        <div class="header">
-          <h1 class="header-title">firebase-starter</h1>
-          <div class="login-block">
-            <span id="user-name">Guest</span>
-            <input id="login-button" type="submit" value="Log In"></input>
-            <input id="logout-button" type="submit" value="Sign Out"></input>
-          </div>
+    <div class="container">
+      <div class="header">
+        <h1 class="header-title">firebase-starter</h1>
+        <div class="login-block">
+          <span id="user-name">Guest</span>
+          <input id="login-button" type="submit" value="Log In"></input>
+          <input id="logout-button" type="submit" value="Sign Out"></input>
         </div>
       </div>
+    </div>
+    <main>
       <hr/>
-      <div class="container content">
+      <div class="content container">
         <div class="row">
           <div class="seven columns">
             <h4>Files</h4>
@@ -33,8 +32,7 @@
             <div id="file-index">
             </div>
           </div>
-          <div class="five columns">
-            <!-- <button id="fetchAll">fetchAll</button> -->
+          <div class="five columns message-col">
             <h4>Messages</h4>
             <div id="messages">
             </div>
@@ -44,6 +42,10 @@
             </div>
           </div>
         </div>
+      </div>
+      <div class="footer">
+        <hr/>
+        <a href="/about.html">About</a>
       </div>
     </main>
     <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
