Fix about and home link

--- a/about.html
+++ b/about.html
@@ -35,9 +35,8 @@
       </div>
       <div class="footer">
         <hr/>
-        <a href="/">Home</a>
+        <a href="/firebase-starter">Home</a>
       </div>
     </main>
-    <!-- <script src="bundle.js"></script> -->
   </body>
 </html>
