--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
       </div>
       <div class="footer">
         <hr/>
-        <a href="/about.html">About</a>
+        <a href="about.html">About</a>
       </div>
     </main>
     <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
