--- a/index.html
+++ b/index.html
@@ -36,10 +36,10 @@
             <h4>Messages</h4>
             <div id="messages">
             </div>
-            <div id="message-input-group">
+            <form id="message-input-group">
               <input id="message-input" type="text" placeholder="enter a message"/>
               <button id="submit-button" type="submit" value="submit">Submit</button>
-            </div>
+            </form>
           </div>
         </div>
       </div>
