--- a/index.html
+++ b/index.html
@@ -36,16 +36,16 @@
             <h4>Messages</h4>
             <div id="messages">
             </div>
-            <div id="message-input-group">
+            <form id="message-input-group">
               <input id="message-input" type="text" placeholder="enter a message"/>
               <button id="submit-button" type="submit" value="submit">Submit</button>
-            </div>
+            </form>
           </div>
         </div>
       </div>
       <div class="footer">
         <hr/>
-        <a href="/about.html">About</a>
+        <a href="about.html">About</a>
       </div>
     </main>
     <script src="https://cdn.firebase.com/js/client/2.4.2/firebase.js"></script>
